welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (!isWeekend){
    if ((cigars >= 40)&&(cigars <= 60)){
      return true
    }
    return false
  } else if (isWeekend){
    if (cigars >= 40){
      return true
    }
  }
}